2001-09-26  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in: typo

	* pp/oprofpp.c: fix oprofpp -s.
	  Use std::string (work not yet finish)
	* pp/oprofpp.h:	ditto
	* pp/opf_filter.cpp: ditto

2001-09-26  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: add nr_interrupts
 
	* gui/oprof_start.h:
	* gui/oprof_start.cpp:
	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start_config.cpp:
	* gui/ui/oprof_start_base.ui: add daemon status
	  display, fix basename()
	 
2001-09-26  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: remove broken bit

	* pp/Makefile.in: fix options
 
	* doc/oprofile.sgml: minor changes
 
2001-09-26  Philippe Elie  <ph_e@club-internet.fr>

	* pp/Makefile.in: increase level of warning
	* pp/oprof_convert.c: minor fix to avoid warning
	* dae/opd_util.c: ditto
	* pp/oprofpp.c: get_linenr() never return null in
	  filename  (fix bug #464482). symcomp() ensure
	  correct vma comparison (fix #464093)
	* dae/opd_util.c: minor fixe in opd_poptGetContext()
	* gui/oprof_start.cpp: minor cleanup

2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop:
	* gui/oprof_start_config.cpp: use pidof instead

2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start_config.cpp: fix is_profiler_started() too 
 
2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop: fix terribly stupid error
 
2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* op_event.c: whooops
 
2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: std:: fix
 
	* dae/op_start:
	* op_events.c: robustness fix

2001-09-25  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: fix silly bug
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* pp/opf_filter.cpp: "fix" compile error
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprofile:
	* gui/Makefile.in: remove old gui
 
2001-09-24  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: make a little more robust
 