@@ -1,3 +1,9 @@
+2001-09-27  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/opf_container.cpp:
+	* pp/oprofpp.h:
+	* pp/oprofpp.c: speed improvements
+ 
 2001-09-26  Philippe Elie  <ph_e@club-internet.fr>
 
 	* configure.in: typo
